# drydock

./: .gitignore  .prettierrc  README.md  eslint.config.js  package.json  pnpm-lock.yaml  schema.sql  svelte.config.js  tsconfig.json  vite.config.js
src/: app.css  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/lib/components/: ArticleBlock.svelte  BetForm.svelte  Contact.svelte  Creator.svelte  EvidenceForm.svelte  EvidenceView.svelte  FinalDraft.svelte  MissionControl.svelte  Navbar.svelte  Ocean.svelte  Parlour.svelte  Ping.svelte  QuickBetForm.svelte  Radar.svelte  StrangerTides.svelte  TiptapEditor.svelte  index.ts
src/lib/icons/: Gear.svelte  LighthouseIcon.svelte  SubmarineParticle.svelte  index.ts
src/lib/schema/: index.ts
src/lib/services/: animator.svelte.ts  drydock.svelte.ts  index.ts  repospace.svelte.ts  wingman.svelte.ts
src/lib/services/internal/: coastline.svelte.ts  publisher.svelte.ts
src/lib/utils/: index.ts
src/routes/: +layout.svelte  +page.svelte
src/routes/coastline/: +page.svelte
src/routes/coastline/[id]/: +page.svelte
src/routes/community/: +page.svelte
src/routes/outbox/: +page.svelte
