[package]
name = "Drydock"
version = "1.0.0"
description = "Surface for surface for maintenance, repairs, and checks on yourself as a contractor"
authors = ["you"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "drydock_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio"] }
tokio = { version = "1", features = ["full"] }
tauri-plugin-dialog = "2"
reqwest = { version = "0.12.28", features = ["json", "cookies"] }
anyhow = "1"
async-trait = "0.1"
regex = "1"
url = "2"
rand = "0.10.0"
base64 = "0.22"
dirs = "5"
tokio-util = { version = "0.7", features = ["rt"] }
urlencoding = "2.1.3"
tauri-plugin-store = "2"
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
chrono = "0.4.44"
ndarray = { version = "0.17.2", features = ["approx"] }
ort = { version = "2.0.0-rc.12", features = ["load-dynamic"] }
tokenizers = { version = "0.22.2", default-features = false, features = ["onig"] }
